--- a/index.html
+++ b/index.html
@@ -3,53 +3,102 @@
 <head>
 	<meta charset="UTF-8">
 	<title>stack</title>
+	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 	<script src="eventstack.js"></script>
 </head>
 <body>
+<ol id="logger">
+	
+</ol>
+
 <script>
 
-var eMain = new eventStack('main');
 
-eMain.push(function(stk,data){
-	l('ZER0');
-	return true;
-});
+	function log(){
+		var line = $("<li>").appendTo("#logger");
+		_.each(arguments,function(arg){
+			$('<span>')
+				.append(' ')
+				.append( arg )
+				.appendTo(line);
+		});
+	}
 
-eMain.push(function(stk,data){
-	data.name = data.name.split('');
-	l(data)
-	return true;
-},{name:'split',depend:'upper'});
+(function(){
 
-eMain.push(function(stk,data){
-	l(stk,data);
-	data.name = data.name.toUpperCase();
-	return true;
-},{name:'upper',depend:'set-name'});
-
-eMain.push(function(stk){
-	l('delay 1s');
-	setTimeout(function(){
-		stk.next({name:'fulano'});
-		l(stk);
-	},1000);
-},{name:'set-name',depend:'main'});
-
-eMain.push(function(stk,data){
-	l('X');
-	return true;
-},{name:'main'});
-
-eMain.run();
+	var eMain = eventStack('main');
 
 
-var eSecond = new eventStack('second');
-eSecond.push(function(stk,data){
-	l('dois','ZER0');
-	return true;
-});
-eSecond.run();
+
+	eMain.push(function(stk,data){
+		return true;
+	});
+
+
+	eMain.push(function(stk,data){
+		if( data.resposta == 'sim' ){
+			log(stk.step,'Ah, beleza.');
+			return false;
+		}
+		return true;
+	},{name:'sim',depend:'q'});
+
+	eMain.push(function(stk,data){
+		log(stk.step,'Me fale mais sobre isso!');
+		return true;
+	},{name:'nao',depend:'q'});
+
+	eMain.push(function(stk,data){
+		log(stk.step,'fim');
+		return true;
+	},{name:'split',depend:'q'});
+
+	eMain.push(function(stk,data){
+		log(stk.step,'Espera 1s...');
+		setTimeout(function(){
+			var step = stk.step;
+			var sim = $('<a href=#>').append('Você acha que sim?').click(function(){
+				stk.next({
+					resposta: 'sim'
+				},step);
+			})
+			var nao = $('<a href=#>').append('Você acha que não?').click(function(){
+				stk.next({
+					resposta: 'nao'
+				},step);
+			})
+			log(stk.step,'A chuva vai para baixo ?',sim,nao);
+		},1000);
+	},{name:'q',depend:'main'});
+
+	eMain.push(function(stk,data){
+		log(stk.step,'go!');
+		return true;
+	},{name:'main'});
+
+})();
+
+
+
+(function(){
+	var eMain = eventStack('main');
+	$('<button>').append('CLICK').click(function(){
+		eMain.run();
+	}).appendTo('body');
+
+})();
+
+(function(){
+	var eSecond = eventStack('second');
+	eSecond.push(function(stk,data){
+		l(this)
+		log('Outra coisa',this);
+		return true;
+	});
+	eSecond.run();
+	
+})()
 
 /*
 e.prep(function(stk,data){
